updated app name

--- a/ProjectEcommerce/templates/ecom/payment.html
+++ b/ProjectEcommerce/templates/ecom/payment.html
@@ -12,7 +12,7 @@
 .pl-ziro { padding-left: 0px; }
 </style>
 <br><br>
-<center><i>This is a FAKE PAYMENT. Just for demo purpose</i></center>
+<center><i>This PAYMENT is Just for a demo purpose!!!</i></center>
 <br><br>
 <div class="container" style="text-align:center; padding-left:300px;">
     <div class="row">
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <ul class="nav nav-pills nav-stacked">
-                <li class="active"><a href="#"><span class="badge pull-right">{{total}}</span> Final Payment</a>
+                <li class="active"><a href="#"><span class="badge pull-right">{{total}}</span> Total payable</a>
                 </li>
             </ul>
             <br/>
