--- a/ProjectEcommerce/templates/ecom/payment_success.html
+++ b/ProjectEcommerce/templates/ecom/payment_success.html
@@ -43,6 +43,8 @@ a{
    <img  src="http://share.ashiknesin.com/green-checkmark.png" class="center" alt="" />
   <h2>Payment Successful !</h2>
   <p>We are delighted to inform you that we received your payments.</p>
+  <h3>Thank you for shopping with us, Wishes from our founder M </h3>
+
   <br>
   <br>
   <a style="text-decoration:none;" href="/my-order" class="btn btn-success btn-lg">View Orders/Track Orders</a>
