--- a/ProjectEcommerce/templates/ecom/cart.html
+++ b/ProjectEcommerce/templates/ecom/cart.html
@@ -62,9 +62,7 @@
 </style>
 
 </head>
-<!--
-written By : sumit kumar
--->
+
 <br><br><br><br>
 
 <div class="container">
@@ -89,7 +87,7 @@ written By : sumit kumar
       <tr>
         <td> {{p.name}}</td>
         <td> <img src="{% static p.product_image.url %}" alt="Profile Pic" height="50px" width="50px" /></td>
-        <td>$ {{p.price}}</td>
+        <td>₹ {{p.price}}</td>
         <td>{{p.description}}</td>
 
         <td><a class="btn btn-danger btn-xs" href="{% url 'remove-from-cart' p.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
@@ -105,13 +103,11 @@ written By : sumit kumar
 </div>
 <br><br><br>
 <div style="text-align: center;">
-  <button class="btn btn-danger btn-lg">Total ${{total}}</button>
+  <button class="btn btn-danger btn-lg">Total ₹{{total}}</button>
   <a href="/customer-address"><button class="btn btn-success btn-lg" ><span>Purchase </span></button></a>
 </div>
 
 
 <br><br><br><br><br>
-<!--
-developed By : sumit kumar
--->
+
 {% endblock content %}
