--- a/ProjectEcommerce/templates/ecom/edit_profile.html
+++ b/ProjectEcommerce/templates/ecom/edit_profile.html
@@ -48,7 +48,7 @@
 
 </head>
 <br><br><br><br><br><br>
-<!------ update page for doctor by admin(sumit)  ---------->
+<!------ update page for doctor by admin  ---------->
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="container register-form">
@@ -90,8 +90,5 @@
     </div>
   </div>
 </form>
-<!--
-developed By : sumit kumar
--->
 
 {% endblock content %}
