--- a/ProjectEcommerce/templates/ecom/footer.html
+++ b/ProjectEcommerce/templates/ecom/footer.html
@@ -8,9 +8,9 @@
 
 
   <style>
-    /*---------------------------------------
+    /*
    Social section
------------------------------------------*/
+*/
     footer {
       padding: 0px 0px 0px 0px;
       background-color: black;
@@ -76,15 +76,12 @@
     <div class="row">
       <div class="col-md-12 col-sm-12">
         <div style="color:#ffffff;" class="wow fadeInUp footer-copyright">
-          <p>Ecommerce Site in Python using Django Framework<br>
-            &copy; 2022 Developed By Sumit Kumar </p>
+          <p>Ecommerce Site in Python using Django Framework for SOFTENS<br>
+            @ Developed By Mirzad M N </p>
         </div>
       </div>
     </div>
   </div>
 </footer>
-<!--
-developed By : sumit kumar
--->
 
 </html>
